<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_separation">

    <ImageView
        android:id="@+id/imgCharacter"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvCommics"
        android:layout_marginStart="@dimen/dimen_separation"
        android:layout_toEndOf="@+id/imgCharacter"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tvCommics"
        app:layout_constraintStart_toEndOf="@+id/imgCharacter"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctd_title_character"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctd_description_character" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvCommics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCharacter"
        android:text="@string/lb_comics"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCharacter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerComics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCommics"
        android:minHeight="120dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerComics"
        android:text="@string/lb_series"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCharacter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSeries"
        android:minHeight="120dp"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>